--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
-
 {
     "name": "johnshopkins/http-exchange",
-    "description": "A library of PHP interfaces and adapters to make swapping out HTTP library dependencies quick and easy.",
+    "description": "A collection of PHP interfaces and adapters to make swapping out HTTP library dependencies quick and easy.",
     "keywords": ["http", "interfaces", "adapters", "api", "wrapper"],
     "homepage": "http://github.com/johnshopkins/http-exchange",
     "license": "MIT",
