--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "autoload": {
         "psr-0" : {
-            "HttpExchange" : ""
+            "HttpExchange" : "src/"
         }
     }
 }
