--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,11 @@
   "homepage": "http://github.com/johnshopkins/http-exchange",
   "license": "MIT",
   "require": {
-    "php": ">=5.3.2"
+    "php": ">=8.1"
   },
   "autoload": {
-    "psr-0" : {
-      "HttpExchange" : "src/"
+    "psr-4" : {
+      "HttpExchange\\" : ["src/"]
     }
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^4.8",
-    "php-mock/php-mock-phpunit": "^1.1"
   }
 }
