--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,21 @@
 {
   "name": "johnshopkins/http-exchange",
-  "description": "A collection of PHP interfaces and adapters to make swapping out HTTP library dependencies quick and easy.",
-  "homepage": "http://github.com/johnshopkins/http-exchange",
+  "description": "A collection of PHP HTTP client adapters to make swapping out HTTP client dependencies quick and easy.",
+  "homepage": "https://github.com/johnshopkins/http-exchange",
   "license": "MIT",
   "require": {
-    "php": ">=8.1"
+    "php": ">=8.0"
+  },
+  "require-dev": {
+    "guzzlehttp/guzzle": "^7.0",
+    "phpunit/phpunit": "^10.3"
+  },
+  "suggest": {
+    "guzzlehttp/guzzle": "HTTP client supported by this library"
   },
   "autoload": {
     "psr-4" : {
-      "HttpExchange\\" : ["src/"]
+      "HttpExchange\\" : ["src/", "tests/src/", "tests/mocks/"]
     }
   }
 }
